--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
 
 #must be unique in a given SonarQube instance
-sonar.projectKey=testAlgo
+sonar.projectKey=Arkantick_USMB-bachelor2
 
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.organization=NicoJupiter-github
